@startuml

title __ENTITIES's Class Diagram__\n

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane {
        - capacity : int
        - flights : List<Flight>
        - id : Long
        - name : String
        {static} - serialVersionUID : long
        - type : String
        + equals()
        + getCapacity()
        + getFlights()
        + getId()
        + getName()
        + getType()
        + hashCode()
        + setCapacity()
        + setFlights()
        + setId()
        + setName()
        + setType()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination {
        - city : String
        - code : String
        - country : String
        - id : Long
        - incoming : List<Flight>
        - outcoming : List<Flight>
        {static} - serialVersionUID : long
        + equals()
        + getCity()
        + getCode()
        + getCountry()
        + getId()
        + hashCode()
        + setCity()
        + setCode()
        + setCountry()
        + setId()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.EntityDTOTransformer {
        {static} + airplaneConvert()
        {static} + airplaneTOConvert()
        {static} + destinationConvert()
        {static} + destinationTOConvert()
        {static} + flightConvert()
        {static} + flightListConvert()
        {static} + flightTOConvert()
        {static} + stewardConvert()
        {static} + stewardListConvert()
        {static} + stewardTOConvert()
        {static} + stewardTOListConvert()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight {
        - arrivalTime : Timestamp
        - departureTime : Timestamp
        - id : Long
        - stewardList : List<Steward>
        + equals()
        + getAirplane()
        + getArrivalTime()
        + getDepartureTime()
        + getId()
        + getOrigin()
        + getStewardList()
        + getTarget()
        + hashCode()
        + setAirplane()
        + setArrivalTime()
        + setDepartureTime()
        + setId()
        + setOrigin()
        + setStewardList()
        + setTarget()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Steward {
        - firstName : String
        - id : Long
        - lastName : String
        + Steward()
        + equals()
        + getFirstName()
        + getId()
        + getLastName()
        + hashCode()
        + setFirstName()
        + setId()
        + setLastName()
        + toString()
    }
  }
  

  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane : airplane
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination : origin
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination : target
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Steward .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
